[gd_scene load_steps=43 format=3 uid="uid://c0g0nvvwqsoly"]

[ext_resource type="Script" path="res://scripts/World.gd" id="1_fuumv"]
[ext_resource type="Script" path="res://scripts/Movement.gd" id="2_tvwa3"]
[ext_resource type="Texture2D" uid="uid://cryo0fnpaguy2" path="res://sprites/player/idle/Idle_animation_0000.png" id="3_iname"]
[ext_resource type="Texture2D" uid="uid://ddojd234ywc2s" path="res://sprites/player/idle/Idle_animation_0001.png" id="4_smt4a"]
[ext_resource type="Texture2D" uid="uid://bjl1x4vtwwkkd" path="res://sprites/player/idle/Idle_animation_0002.png" id="5_lpw48"]
[ext_resource type="Texture2D" uid="uid://ivx6sqnvipav" path="res://sprites/player/running/Timeline 1_0000.png" id="6_2q568"]
[ext_resource type="Texture2D" uid="uid://tig253slp26p" path="res://sprites/player/running/Timeline 1_0001.png" id="7_upd2c"]
[ext_resource type="Texture2D" uid="uid://dolrchgrcffas" path="res://sprites/player/running/Timeline 1_0002.png" id="8_635cv"]
[ext_resource type="Texture2D" uid="uid://bcv37x5amh5ba" path="res://sprites/player/running/Timeline 1_0003.png" id="9_xx2pt"]
[ext_resource type="Texture2D" uid="uid://8tvhr00p5y7b" path="res://sprites/player/running/Timeline 1_0004.png" id="10_10t2k"]
[ext_resource type="Texture2D" uid="uid://ddrrpoqv4qfso" path="res://sprites/player/running/Timeline 1_0005.png" id="11_0ed8n"]
[ext_resource type="Texture2D" uid="uid://dpvc5e0fc46v7" path="res://sprites/player/running/Timeline 1_0006.png" id="12_77ijm"]
[ext_resource type="Texture2D" uid="uid://bwfr7ie8mlety" path="res://sprites/player/running/Timeline 1_0007.png" id="13_d7u2t"]
[ext_resource type="Texture2D" uid="uid://6lad0ut0lh3p" path="res://sprites/player/running/Timeline 1_0008.png" id="14_rrjf6"]
[ext_resource type="Texture2D" uid="uid://81xm8s1acee1" path="res://sprites/player/running/Timeline 1_0009.png" id="15_jioud"]
[ext_resource type="Texture2D" uid="uid://bvponi5e85cni" path="res://sprites/player/running/Timeline 1_0010.png" id="16_f58jj"]
[ext_resource type="FontFile" uid="uid://dw4q2lgvxq2x8" path="res://font/KnightWarrior-w16n8.otf" id="17_x0ede"]
[ext_resource type="AudioStream" uid="uid://53pfqccq01s1" path="res://music/MelonJam_Track_1_draft.mp3" id="18_xy8cw"]
[ext_resource type="Texture2D" uid="uid://bguejwiflte4e" path="res://sprites/beacon/inactive/Beacon_inactive_0000.png" id="19_6l3lk"]
[ext_resource type="Texture2D" uid="uid://cc51k64u1tpq2" path="res://sprites/beacon/inactive/Beacon_inactive_0001.png" id="20_kga57"]
[ext_resource type="Texture2D" uid="uid://cthjqe0j1rqlo" path="res://sprites/beacon/inactive/Beacon_inactive_0002.png" id="21_plq5f"]
[ext_resource type="Texture2D" uid="uid://bsild7akmvubb" path="res://sprites/beacon/inactive/Beacon_inactive_0003.png" id="22_s60mc"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_c6e7f"]
radius = 16.0
height = 88.5

[sub_resource type="Animation" id="Animation_5xoxn"]
resource_name = "Idle"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_pge5o"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_i43en"]
resource_name = "Run"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Run"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lsi2f"]
_data = {
"Idle": SubResource("Animation_5xoxn"),
"RESET": SubResource("Animation_pge5o"),
"Run": SubResource("Animation_i43en")
}

[sub_resource type="SpriteFrames" id="SpriteFrames_3u1to"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_iname")
}, {
"duration": 1.0,
"texture": ExtResource("4_smt4a")
}, {
"duration": 1.0,
"texture": ExtResource("5_lpw48")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_2q568")
}, {
"duration": 1.0,
"texture": ExtResource("7_upd2c")
}, {
"duration": 1.0,
"texture": ExtResource("8_635cv")
}, {
"duration": 1.0,
"texture": ExtResource("9_xx2pt")
}, {
"duration": 1.0,
"texture": ExtResource("10_10t2k")
}, {
"duration": 1.0,
"texture": ExtResource("11_0ed8n")
}, {
"duration": 1.0,
"texture": ExtResource("12_77ijm")
}, {
"duration": 1.0,
"texture": ExtResource("13_d7u2t")
}, {
"duration": 1.0,
"texture": ExtResource("14_rrjf6")
}, {
"duration": 1.0,
"texture": ExtResource("15_jioud")
}, {
"duration": 1.0,
"texture": ExtResource("16_f58jj")
}],
"loop": true,
"name": &"Run",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_idhfj"]
size = Vector2(1276, 241)

[sub_resource type="QuadMesh" id="QuadMesh_f4hvr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8bywn"]
size = Vector2(1663, 241)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_snefn"]
size = Vector2(52, 126)

[sub_resource type="QuadMesh" id="QuadMesh_fcl7x"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3cece"]
size = Vector2(1849, 845.25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ykf10"]
size = Vector2(48.0004, 174)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s1fdx"]
size = Vector2(48.0004, 221)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c7qkg"]
size = Vector2(69.5, 51.5)

[sub_resource type="Animation" id="Animation_lbwy8"]
resource_name = "Inactive"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Inactive"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_5g7uq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uxa63"]
_data = {
"Inactive": SubResource("Animation_lbwy8"),
"RESET": SubResource("Animation_5g7uq")
}

[sub_resource type="SpriteFrames" id="SpriteFrames_qot31"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("19_6l3lk")
}, {
"duration": 1.0,
"texture": ExtResource("20_kga57")
}, {
"duration": 1.0,
"texture": ExtResource("21_plq5f")
}, {
"duration": 1.0,
"texture": ExtResource("22_s60mc")
}],
"loop": true,
"name": &"Inactive",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v6sa4"]
size = Vector2(69.5, 51.5)

[node name="World" type="Node2D"]
script = ExtResource("1_fuumv")

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(5, -335)
script = ExtResource("2_tvwa3")

[node name="RayCast2D" type="RayCast2D" parent="Player"]
position = Vector2(193.625, 840.75)
target_position = Vector2(22, 0)

[node name="RayCast2D2" type="RayCast2D" parent="Player"]
position = Vector2(193.625, 840.75)
target_position = Vector2(-22, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(193.625, 840.75)
shape = SubResource("CapsuleShape2D_c6e7f")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Player"]
libraries = {
"": SubResource("AnimationLibrary_lsi2f")
}
autoplay = "Idle"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Player"]
position = Vector2(194.625, 828.75)
scale = Vector2(0.25, 0.25)
sprite_frames = SubResource("SpriteFrames_3u1to")
animation = &"Idle"
frame = 1

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2(366, 849)
zoom = Vector2(1.3, 1.3)
limit_left = 0

[node name="Ground" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground"]
position = Vector2(642, 711)
shape = SubResource("RectangleShape2D_idhfj")
one_way_collision_margin = 2.3
debug_color = Color(0, 0.596078, 0.72549, 0.419608)

[node name="MeshInstance2D" type="MeshInstance2D" parent="Ground"]
position = Vector2(640, 711)
scale = Vector2(1280, 250)
mesh = SubResource("QuadMesh_f4hvr")

[node name="Ground2" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground2"]
position = Vector2(3487.5, 731.5)
shape = SubResource("RectangleShape2D_8bywn")
one_way_collision_margin = 2.3
debug_color = Color(0, 0.596078, 0.72549, 0.419608)

[node name="MeshInstance2D" type="MeshInstance2D" parent="Ground2"]
position = Vector2(3487.5, 729.5)
scale = Vector2(1663, 243)
mesh = SubResource("QuadMesh_f4hvr")

[node name="Wall" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall"]
position = Vector2(3785, 431)
shape = SubResource("RectangleShape2D_snefn")

[node name="MeshInstance2D" type="MeshInstance2D" parent="Wall"]
position = Vector2(3785.24, 430.5)
scale = Vector2(52.4803, 129)
mesh = SubResource("QuadMesh_fcl7x")

[node name="Wall2" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall2"]
position = Vector2(5242, 454.1)
scale = Vector2(1, 0.8)
shape = SubResource("RectangleShape2D_3cece")

[node name="MeshInstance2D" type="MeshInstance2D" parent="Wall2"]
position = Vector2(5239, 484)
scale = Vector2(1852, 733.695)
mesh = SubResource("QuadMesh_fcl7x")

[node name="Platform" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform"]
position = Vector2(1074, 485)
rotation = 1.5708
shape = SubResource("RectangleShape2D_ykf10")

[node name="MeshInstance2D" type="MeshInstance2D" parent="Platform"]
position = Vector2(1073.91, 485)
rotation = 1.5708
scale = Vector2(48.652, 175)
mesh = SubResource("QuadMesh_fcl7x")

[node name="Platform2" type="StaticBody2D" parent="."]
position = Vector2(414, -162)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform2"]
position = Vector2(1097.5, 458)
rotation = 1.5708
shape = SubResource("RectangleShape2D_s1fdx")

[node name="MeshInstance2D" type="MeshInstance2D" parent="Platform2"]
position = Vector2(1097.37, 458)
rotation = 1.5708
scale = Vector2(48.652, 221.921)
mesh = SubResource("QuadMesh_fcl7x")

[node name="Beacon1" type="Area2D" parent="."]
position = Vector2(11, 115)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Beacon1"]
position = Vector2(5388.25, -24.75)
shape = SubResource("RectangleShape2D_c7qkg")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Beacon1"]
libraries = {
"": SubResource("AnimationLibrary_uxa63")
}
autoplay = "Inactive"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Beacon1"]
position = Vector2(5390.25, -127.5)
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_qot31")
animation = &"Inactive"
frame = 1

[node name="Beacon2" type="Area2D" parent="."]
position = Vector2(-705, 115)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Beacon2"]
position = Vector2(5388.25, -24.75)
shape = SubResource("RectangleShape2D_v6sa4")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Beacon2"]
libraries = {
"": SubResource("AnimationLibrary_uxa63")
}
autoplay = "Inactive"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Beacon2"]
position = Vector2(5390.25, -127.5)
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_qot31")
animation = &"Inactive"
frame = 1

[node name="Paused" type="Node" parent="."]
process_mode = 2

[node name="Resume" type="Button" parent="Paused"]
visible = false
modulate = Color(1, 1, 1, 0)
offset_left = 460.0
offset_top = 220.0
offset_right = 856.0
offset_bottom = 515.0
theme_override_fonts/font = ExtResource("17_x0ede")
theme_override_font_sizes/font_size = 60
text = "Resume"

[node name="Label" type="Label" parent="Paused"]
offset_left = 227.0
offset_top = 266.0
offset_right = 843.0
offset_bottom = 296.0
theme_override_fonts/font = ExtResource("17_x0ede")
theme_override_font_sizes/font_size = 25
text = "You have paused the game. Press \"Resume\" or Enter to unpause"

[node name="Paused2" type="Node" parent="."]
process_mode = 2

[node name="Resume2" type="Button" parent="Paused2"]
modulate = Color(1, 1, 1, 0)
offset_right = 8.0
offset_bottom = 8.0

[node name="Label" type="Label" parent="Paused2"]
offset_left = 2422.0
offset_top = -1784.0
offset_right = 3783.0
offset_bottom = -1670.0
theme_override_fonts/font = ExtResource("17_x0ede")
theme_override_font_sizes/font_size = 100
text = "Map Inspector (Press M to leave)"

[node name="Camera2D" type="Camera2D" parent="Paused2"]
position = Vector2(3099, -58)
zoom = Vector2(0.2, 0.2)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("18_xy8cw")
volume_db = -20.0
autoplay = true

[node name="Label" type="Label" parent="."]
offset_left = 114.0
offset_top = 326.0
offset_right = 387.0
offset_bottom = 465.0
theme_override_fonts/font = ExtResource("17_x0ede")
theme_override_font_sizes/font_size = 20
text = "This is GlitterDash. 
Your objective is to light up
all the beacons while passing
through various obstacles"

[node name="Label2" type="Label" parent="."]
offset_left = 670.0
offset_top = 452.0
offset_right = 965.0
offset_bottom = 591.0
theme_override_fonts/font = ExtResource("17_x0ede")
theme_override_font_sizes/font_size = 20
text = "Press Space, UP_ARROW
 or W to jump"
horizontal_alignment = 1

[node name="Label3" type="Label" parent="."]
offset_left = 1124.0
offset_top = 374.0
offset_right = 1419.0
offset_bottom = 513.0
theme_override_fonts/font = ExtResource("17_x0ede")
theme_override_font_sizes/font_size = 20
text = "To Double Jump, 
press a jump key twice"
horizontal_alignment = 1

[node name="Label4" type="Label" parent="."]
offset_left = 1602.0
offset_top = 169.0
offset_right = 1897.0
offset_bottom = 308.0
theme_override_fonts/font = ExtResource("17_x0ede")
theme_override_font_sizes/font_size = 20
text = "As you've probably noticed,
your player glides when you
 double jump
Try to jump across this void"
horizontal_alignment = 1

[node name="Label5" type="Label" parent="."]
offset_left = 2799.0
offset_top = 517.0
offset_right = 3094.0
offset_bottom = 547.0
theme_override_fonts/font = ExtResource("17_x0ede")
theme_override_font_sizes/font_size = 20
text = "You've made it!!"
horizontal_alignment = 1

[node name="Label6" type="Label" parent="."]
offset_left = 3432.0
offset_top = 466.0
offset_right = 3727.0
offset_bottom = 544.0
theme_override_fonts/font = ExtResource("17_x0ede")
theme_override_font_sizes/font_size = 20
text = "To Latch onto walls, 
go against it and 
press ctrl or shift"
horizontal_alignment = 1

[node name="Label7" type="Label" parent="."]
offset_left = 4029.0
offset_top = 440.0
offset_right = 4324.0
offset_bottom = 579.0
theme_override_fonts/font = ExtResource("17_x0ede")
theme_override_font_sizes/font_size = 20
text = "Oh, no, a really high wall! 
Luckily, you can latch
onto it and then double jump 
your way to the top!!"
horizontal_alignment = 1

[node name="Label8" type="Label" parent="."]
offset_left = 4979.0
offset_top = -64.0
offset_right = 5322.0
offset_bottom = 176.0
theme_override_fonts/font = ExtResource("17_x0ede")
theme_override_font_sizes/font_size = 20
text = "This is a beacon. Your main goal is
 to activate all of them to progress 
to the next level. In this case 
there's only one - charm it
by pressing the E key "
horizontal_alignment = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TimerL" type="Label" parent="CanvasLayer"]
offset_left = 37.0
offset_top = 259.0
offset_right = 77.0
offset_bottom = 282.0
theme_override_fonts/font = ExtResource("17_x0ede")
theme_override_font_sizes/font_size = 15

[connection signal="body_entered" from="Beacon1" to="Player" method="_on_beacon_1_body_entered"]
[connection signal="body_exited" from="Beacon1" to="Player" method="_on_beacon_1_body_exited"]
[connection signal="body_entered" from="Beacon2" to="Player" method="_on_beacon_2_body_entered"]
[connection signal="body_exited" from="Beacon2" to="Player" method="_on_beacon_2_body_exited"]
[connection signal="pressed" from="Paused/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Paused2/Resume2" to="." method="_on_resume_2_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
